# ecommerce-backend

./: .gitignore  build.sh  population_script.py  pyproject.toml  r.txt  requirements.txt
Ecommerce/: settings.py  urls.py
order/: admin.py  models.py  serializer.py  views.py
order/migrations/: 0001_initial.py  0002_initial.py
payment/: models.py  serializer.py  views.py
payment/migrations/: 0001_initial.py
product/: models.py  serializer.py  views.py
product/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_image.py  0002_remove_category_id_alter_category_title_and_more.py
userProfile/: admin.py  models.py  serializer.py  views.py
userProfile/migrations/: 0001_initial.py  0002_customuser_is_active_customuser_is_admin.py  0002_customuser_is_active_customuser_is_admin_and_more.py  0003_customuser_is_merchant_alter_customuser_address_and_more.py  0004_alter_customuser_zipcode.py  0005_alter_customuser_picture.py
utils/: middleware.py  utils.py
