[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["eedriz99 <akinsolaidris1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = {extras = ["argon2"], version = "^5.0.2"}
django-cors-headers = "4.3.1"
djangorestframework = "3.14.0"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
